<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Edinburgh Wolves</string>
    <string name="title_section1">Standings</string>
    <string name="title_section2">Fixtures</string>
    <string name="title_section3">News</string>
    <string name="action_example">Example</string>
    <string name="menu_about">About</string>

    <string name="default_loading">Loading&#8230; Please Wait</string>
    <string name="default_home_team">Wolves</string>
    <string name="default_home_team_acronym">EDI</string>
    <string name="default_home_score">17</string>
    <string name="default_away_team">Tigers</string>
    <string name="default_away_team_acronym">GLA</string>
    <string name="default_away_score">16</string>
    <string name="default_scoreboard_center">\@</string>

    <string name="standings_title">STANDINGS</string>
    <string name="standings_header_pct">Pct</string>
    <string name="standings_header_foragg">F / A</string>
    <string name="standings_default_team">Edinburgh Wolves</string>
    <string name="standings_default_wlt">10&#8211;0&#8211;1</string>
    <string name="standings_default_pct">.967</string>
    <string name="standings_default_foragg">143 / 112</string>
    <string name="title_activity_wolves_home">WolvesHomeActivity</string>
    <string name="scoreboard_home_name_default">Home</string>
    <string name="scoreboard_away_name_default">Away</string>
    <string name="scoreboard_score_default">0</string>
    <string name="nav_tab_home">Wolves</string>
    <string name="nav_tab_fixtures">Fixtures</string>
    <string name="nav_tab_news">News</string>
    <string name="nav_tab_roster">Roster</string>
    <string name="nav_tab_how_to">Football 101</string>

</resources>
