<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scoreboard_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:paddingBottom="@dimen/scoreboard_top_bottom_padding"
    android:paddingTop="@dimen/scoreboard_top_bottom_padding">

    <TextView
        android:id="@+id/textView_away_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/textView_away_score"
        android:gravity="center_horizontal"
        android:textSize="@dimen/scoreboard_team_name"
        tools:text="@string/default_home_team" />

    <TextView
        android:id="@+id/textView_away_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/view_scoreboard_center"
        android:paddingLeft="@dimen/scoreboard_fields_side_padding"
        android:paddingRight="@dimen/scoreboard_fields_side_padding"
        android:textColor="@android:color/white"
        android:textSize="@dimen/scoreboard_score"
        tools:text="@string/default_home_score" />

    <View
        android:id="@+id/view_scoreboard_center"
        android:layout_width="5dp"
        android:layout_height="5dp"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/textView_home_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/view_scoreboard_center"
        android:paddingLeft="@dimen/scoreboard_fields_side_padding"
        android:paddingRight="@dimen/scoreboard_fields_side_padding"
        android:textColor="@android:color/white"
        android:textSize="@dimen/scoreboard_score"
        tools:text="@string/default_away_score" />

    <TextView
        android:id="@+id/textView_home_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/textView_home_score"
        android:gravity="center_horizontal"
        android:textSize="@dimen/scoreboard_team_name"
        tools:text="@string/default_away_team" />
</RelativeLayout>
