<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.lobsterdoodle.edinburghwolves.app.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" android:id="@+id/toolbar_layout"/>

        <RelativeLayout
            android:id="@+id/scoreboard_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:paddingTop="@dimen/scoreboard_top_bottom_padding"
            android:paddingBottom="@dimen/scoreboard_top_bottom_padding" >

            <TextView
                android:id="@+id/textView_away_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/textView_away_score"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:gravity="center_horizontal"
                android:text="@string/default_home_team"
                android:textSize="@dimen/scoreboard_team_name" />

            <TextView
                android:id="@+id/textView_away_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/view_scoreboard_center"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/scoreboard_fields_side_padding"
                android:paddingRight="@dimen/scoreboard_fields_side_padding"
                android:text="@string/default_home_score"
                android:textSize="@dimen/scoreboard_score"
                android:textColor="@android:color/white"/>

            <View
                android:id="@+id/view_scoreboard_center"
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_centerInParent="true" />

            <TextView
                android:id="@+id/textView_home_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/view_scoreboard_center"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/scoreboard_fields_side_padding"
                android:paddingRight="@dimen/scoreboard_fields_side_padding"
                android:text="@string/default_away_score"
                android:textSize="@dimen/scoreboard_score"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView_home_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/textView_home_score"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center_horizontal"
                android:text="@string/default_away_team"
                android:textSize="@dimen/scoreboard_team_name" />
        </RelativeLayout>

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <fragment android:id="@+id/navigation_drawer"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:name="uk.lobsterdoodle.edinburghwolves.app.NavigationDrawerFragment"
        tools:layout="@layout/fragment_menu" />

</android.support.v4.widget.DrawerLayout>
